set Test / javaOptions